Fixes overlapping date

--- a/angu/styles/components/_cal-entry.scss
+++ b/angu/styles/components/_cal-entry.scss
@@ -22,7 +22,8 @@
     @include font-smoothing(off);
     font-size: inherit;
     margin: 0 0 10px;
-    padding-right: 110px;
+    width: calc(100% - 130px);
+    float: left;
 
     @include respond-to(tablet) {
       padding-right: 0;
@@ -38,6 +39,7 @@
   }
 
   &-description {
+    clear: both;
     margin: 0;
     line-height: 1.4;
     color: $black;
@@ -49,14 +51,15 @@
   }
 
   &-time {
-    position: absolute;
-    right: 0;
-    top: 0;
-    margin: 0;
+    float: right;
+    margin: 0 0 5px;
+    width: 120px;
     line-height: 1;
     font-weight: 500;
 
     @include respond-to(tablet) {
+      float: none;
+      width: auto;
       position: static;
       margin: 15px 0;
     }
